<resources>
    <string name="app_name">Mnemosyne</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_item_tasks">Tasks</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_more">More</string>

    <string name="action_settings">Settings</string>

    <string name="task_name">Task name</string>
    <string name="task_comment">Comment</string>
    <string name="task_content">Description</string>

    <string name="to_date_time">TO</string>
    <string name="from_date_time">FROM</string>

    <string name="edit_reminder_header">REMINDER</string>
    <string name="format_time">MM:HH</string>
    <string name="format_date">DD/MM/YYYY</string>
    <string name="task_status">Done</string>

    <string name="status_done">DONE</string>
    <string name="status_not_done">TODO</string>

    <string name="share_msg">Hey,\nI love to use Mnemosyne app to handle tasks.\nYou should check it out on the playstore.</string>

</resources>
