<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.sebaoun.android.mnemosyne.TaskEditActivity">

    <CheckBox
        android:text="@string/task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/status_box" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/edit_name"
        android:layout_alignParentStart="true"
        android:hint="@string/task_comment"
        android:id="@+id/edit_comment" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_content"
        android:hint="@string/task_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/to_time" />

    <TextView
        android:id="@+id/from_time"
        android:text="@string/format_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignTop="@+id/from_date"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/from_date"
        android:onClick="pickFromTime"
        android:layout_alignBottom="@+id/from_date"
        style="@android:style/Widget.DeviceDefault.Light.Spinner" />

    <TextView
        android:id="@+id/to_time"
        android:text="@string/format_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/to_date"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/to_date"
        android:layout_alignBottom="@+id/to_date"
        android:onClick="pickToTime"
        style="@android:style/Widget.DeviceDefault.Light.Spinner" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/task_name"
        android:layout_alignBaseline="@+id/status_box"
        android:layout_alignBottom="@+id/status_box"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/to_date_time"
        android:text="@string/to_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/from_date"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/to_date"
        android:text="@string/format_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pickToDate"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_below="@+id/to_date_time"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/from_time" />

    <TextView
        android:text="@string/from_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/from_date_time"
        android:layout_below="@+id/edit_comment"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/from_date"
        android:text="@string/format_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:onClick="pickFromDate"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_below="@+id/from_date_time"
        android:layout_alignParentStart="true" />

</RelativeLayout>
